@@ -10,7 +10,8 @@ class Misc(commands.Cog):
         self.bot = bot
 
     @commands.slash_command(
-        guild_ids=guilds
+        guild_ids=guilds,
+        description="Sends the bot's latency in ms"
     )
     async def ping(self, ctx):
         await ctx.send_response(embed=discord.Embed(title="Pong!", description=f"Latency: `{round(self.bot.latency*1000, 2)}ms`"), ephemeral=True)
