@@ -1,3 +1,0 @@
-discord.py==1.7.3
-PyDictionary==2.0.1
-python-dotenv==0.20.0
