@@ -5,5 +5,8 @@
     ],
     "unverified_link_message": ":warning: The link to this book is not managed or reviewed by Writer's Cave.\n**Please proceed with caution.**",
     "verified_link_message": "{} This link is recognised as safe by Writer's Cave.",
-    "guilds": [992020236222091355, 915996676144111706]
+    "guilds": [
+        992020236222091355,
+        915996676144111706
+    ]
 }
