@@ -1,1 +1,2 @@
-*No notes*
++ Added descriptions to slash commands
++ Fixed bugs related to the Library category
